# TighterRPp

./: CMakeLists.txt  README.md
cmake/: FindSDPA.cmake  SDPRPPConfig.cmake.in  SDPRPPConfigVersion.cmake.in  setup_installation.cmake
example/: CMakeLists.txt  example_base.cpp
include/: PrimalAdjugate.h  PrimalBoth.h  PrimalLeft.h  PrimalRight.h  PrimalTypes.h  PrimalUtils.h
result/: basic_params.txt
src/: PrimalAdjugate.cpp  PrimalBoth.cpp  PrimalLeft.cpp  PrimalRight.cpp  PrimalUtils.cpp
test/: CMakeLists.txt  experimentsHelper.cpp  experimentsHelper.h  generateCorrespondences.cpp  generateCorrespondences.h  generic_test.cpp
